# comdare-cache-engine

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .gitmodules.template  CMakeLists.txt  CMakePresets.json  FINDINGS_REV7_6_cache_engine.md  LICENSE  LICENSE_AUDIT_EXT.md  MANUAL_RUN.md  NOTICE  PROJECT_LAYER_MAP.md  README.md  RELEASE_PREP_2026_05_13.md  STRUCTURAL_CORRECTION_cache_engine.md  _analyze_licenses.py  _copy_ext_repos.py  _generate_legacy_reimpl.py  _generate_stubs.py
adapters/: CMakeLists.txt
adapters/A01-hoard/: CMakeLists.txt  README.md  a01_hoard_adapter.hpp
adapters/A03-michael-lockfree/: CMakeLists.txt  README.md  a03_michael_adapter.hpp
adapters/A04-mimalloc/: CMakeLists.txt  README.md  a04_mimalloc_adapter.hpp
adapters/A05-jemalloc/: CMakeLists.txt  README.md  a05_jemalloc_adapter.hpp
adapters/A06-tcmalloc/: CMakeLists.txt  README.md  a06_tcmalloc_adapter.hpp
adapters/A07-snmalloc/: CMakeLists.txt  README.md  a07_snmalloc_adapter.hpp
adapters/A08-scalloc/: CMakeLists.txt  README.md  a08_scalloc_adapter.hpp
adapters/A10-rpmalloc/: CMakeLists.txt  README.md  a10_rpmalloc_adapter.hpp
adapters/A11-lrmalloc/: CMakeLists.txt  README.md  a11_lrmalloc_adapter.hpp
adapters/A20-dlmalloc/: CMakeLists.txt  README.md  a20_dlmalloc_adapter.hpp
adapters/P01-ART/: CMakeLists.txt  README.md  p01_art_adapter.hpp
adapters/P02-HOT/: CMakeLists.txt  README.md  p02_hot_adapter.hpp
adapters/P03-Masstree/: CMakeLists.txt  README.md  p03_masstree_adapter.hpp
adapters/P04-CoCo-trie/: CMakeLists.txt  README.md  p04_coco_trie_adapter.hpp
adapters/P05-START/: CMakeLists.txt  README.md  p05_start_adapter.hpp
adapters/P06-B2tree/: CMakeLists.txt  p06_b2tree_adapter.hpp
adapters/P07-Wormhole/: CMakeLists.txt  README.md  p07_wormhole_adapter.hpp
adapters/P10-SuRF/: CMakeLists.txt  README.md  p10_surf_adapter.hpp
adapters/P20-BTreesAreBack/: CMakeLists.txt  README.md  p20_leanstore_adapter.hpp
adapters/P25-Mahling/: CMakeLists.txt  README.md  p25_mahling_adapter.hpp
adapters/P29-RCU/: CMakeLists.txt  README.md  p29_rcu_adapter.hpp
adapters/P30-HazardPointers/: CMakeLists.txt  README.md  p30_hazard_pointers_adapter.hpp
apps/: CMakeLists.txt
apps/adhoc_emitter/: CMakeLists.txt  main.cpp
apps/anatomy_codegen_tool/: CMakeLists.txt  main.cpp
apps/cache_engine_builder/: CMakeLists.txt  main.cpp
apps/catalog_codegen_tool/: CMakeLists.txt  main.cpp
apps/f15_compare/: CMakeLists.txt  main.cpp
apps/h2_score_akte_tool/: CMakeLists.txt  main.cpp
apps/is_original_validator/: CMakeLists.txt  main.cpp
apps/perm_runner/: CMakeLists.txt  main.cpp
apps/permutation_codegen_tool/: CMakeLists.txt  main.cpp
benchmark_suite/: CMakeLists.txt
benchmark_suite/include/comdare/benchmark_suite/: benchmark_runner.hpp  custom_allocation_1_measurements.hpp  custom_allocation_2_state_log.hpp
engine_choice/: CMakeLists.txt
experiment/: CMakeLists.txt
experiment/include/comdare/experiment/: experiment_demo.hpp  result_aggregator.hpp
experiment/src/: result_aggregator.cpp
ext/: CMakeLists.txt
ext/A01-hoard/src/source/: libhoard.cpp
ext/A07-snmalloc/src/snmalloc/ds/: pooled.h
ext/A07-snmalloc/src/test/: setup.h
ext/P06-B2tree/b2-tree-master/: CMakeLists.txt
ext/P06-B2tree/b2-tree-master/include/: BufferManager.hpp  Database.hpp  hazard.hpp  search.hpp  tree.hpp
ext/P06-B2tree/b2-tree-master/src/: BufferManager.cpp  Database.cpp  main.cpp  tree.cpp
ext/P06-B2tree/b2-tree-master/test/: test_tree.cpp
ext/P06-B2tree/bart-master/: ART.cpp  b2tree_int.cpp  bench.sh  btree.cpp  hattrie.cpp  pbtreestaticart.cpp
ext/allocator/: REPOS_OVERVIEW.md
ext/allocator/A20-dlmalloc/: .gitignore
ext/allocator/axis_06_allocator/paper_a04_mimalloc/: MODIFICATIONS.md  manifest.txt  sha256_locked.txt
ext/allocator/axis_06_allocator/paper_a05_jemalloc/: .gitignore  MODIFICATIONS.md  manifest.txt  sha256_locked.txt
ext/allocator/axis_06_allocator/paper_a07_snmalloc/: .gitignore  MODIFICATIONS.md  README.md  manifest.txt  sha256_locked.txt
ext/allocator/axis_06_allocator/paper_a10_rpmalloc/: manifest.txt  sha256_locked.txt
ext/allocator/axis_06_allocator/paper_a11_lrmalloc/: MODIFICATIONS.md  compiler_info.txt  manifest.txt  sha256_locked.txt
ext/allocator/axis_06_allocator/paper_a20_dlmalloc/: MODIFICATIONS.md  README.md  manifest.txt  sha256_locked.txt
ext/io/liburing/: CMakeLists.txt  COMDARE-VENDOR-PROVENANCE.md
ext/prefetch/axis_07_prefetch/paper_p07_wormhole_prefetch/: README.md
ext/queuing/: REPOS_OVERVIEW.md
ext/queuing/axis_q1_queuing/paper_q01_concurrentqueue/: .gitignore  compiler_info.txt  manifest.txt  sha256_locked.txt
ext/traversal/: REPOS_OVERVIEW.md
search_engine/: CMakeLists.txt
search_engine/fan_out_engine/: CMakeLists.txt
search_engine/memory_layout/: CMakeLists.txt
search_engine/node/: CMakeLists.txt
search_engine/operations/: CMakeLists.txt
search_engine/page/: CMakeLists.txt
search_engine/traversal/: CMakeLists.txt
search_engine/value_handle/: CMakeLists.txt
test_data_accumulation/: CMakeLists.txt
tools/: CMakeLists.txt
tools/abi_stability_test/: README.md
tools/axis_registry_gen/: CMakeLists.txt  main.cpp
tools/axis_version_lock/: CMakeLists.txt  axis_version_lock.cpp
tools/best_binary_selector/: CMakeLists.txt
tools/compiler_provisioning/: README.md
tools/gen_golden_fullpilot/: CMakeLists.txt  main.cpp
tools/gitlab_ci_zih_push/: README.md
tools/latex_anhang/: CMakeLists.txt  main.cpp
tools/latex_toolchain/: README.md  build_thesis.bat  build_thesis.sh  latex_toolchain.cmake
tools/measurement_axis_registry_gen/: CMakeLists.txt  main.cpp
tools/p27_bundle_finder/: CMakeLists.txt
tools/p27_bundle_finder/src/: main.cpp
tools/permutation_codegen/: axes_versions.txt  codegen.bat  codegen.cmake  codegen.py  codegen.sh
tools/prerequisites/: bootstrap_prerequisites.bat  bootstrap_prerequisites.sh
tools/socks5_zih_delivery/: README.md
tools/system_axis_registry_gen/: CMakeLists.txt  main.cpp
tools/ycsb_cli/: CMakeLists.txt  main.cpp
(+2418 files in other folders)
